--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mazeinadia/Table#readme",
   "dependencies": {
+    "autoprefixer": "^9.0.1",
     "axios": "^0.18.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -44,6 +45,7 @@
     "postcss": "^7.0.1",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
+    "postcss-nested": "^3.0.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
